--- a/templates/system.html
+++ b/templates/system.html
@@ -49,7 +49,8 @@
 <footer class="footer">
   <div class="page-content">
     <div class="column-7">
-      Feito com <i class="icon icon-heart"></i> no Google Developer Bus.
+      <img src="/images/website/logo_devbus.png" alt="">
+      <p>Feito com <i class="icon icon-heart red"></i> no Google Developer Bus.</p>
     </div>
     <div class="column-5">
       <div class="g-page" data-width="300" data-href="https://plus.google.com/102147617722859399678" data-layout="landscape" data-rel="publisher"></div>
