--- a/templates/website.html
+++ b/templates/website.html
@@ -33,11 +33,22 @@
 {% endblock %}
 </main>
 
+
 <footer class="footer">
   <div class="page-content">
-    <p>Feito com <i class="icon icon-heart"></i> no Google Developer Bus.</p>
+    <div class="column-7">
+      <img src="/images/website/logo_devbus.png" alt="">
+      <p>Feito com <i class="icon icon-heart red"></i> no Google Developer Bus.</p>
+    </div>
+    <div class="column-5">
+      <div class="g-page" data-width="300" data-href="https://plus.google.com/102147617722859399678" data-layout="landscape" data-rel="publisher"></div>
+    </div>
   </div>
 </footer>
+
+<script type="text/javascript" src="https://apis.google.com/js/platform.js">
+  {lang: 'pt-BR'}
+</script>
 
 </body> 
 </html>
