--- a/assets/styles/querome.css
+++ b/assets/styles/querome.css
@@ -1919,8 +1919,19 @@ table {
 
 .footer {
   background: #fdba33;
-  box-shadow: -1px 0 5px rgba(0, 0, 0, 0.15);
-  padding: 25px 0; }
+  box-shadow: inset 1px 0 5px rgba(0, 0, 0, 0.15);
+  padding: 0; }
+  .footer .page-content {
+    padding: 0; }
+    .footer .page-content p {
+      font-size: 1.05em;
+      color: #fff;
+      font-weight: 300; }
+    .footer .page-content img {
+      display: block;
+      padding: 10px 0 0px 0; }
+    .footer .page-content .icon {
+      color: #ff0000; }
 
 .header {
   border-top: 5px solid #652c90;
@@ -1934,6 +1945,17 @@ table {
   padding: 5px 10px;
   text-transform: uppercase;
   vertical-align: middle; }
+  .ui.label.floating {
+    background: #d95c5c;
+    border-radius: 2px;
+    color: #fff;
+    font-weight: bold;
+    left: 99%;
+    margin: 0em 0em 0em -15px !important;
+    padding: 4px 8px;
+    position: absolute;
+    top: -10px;
+    z-index: 100; }
   .ui.label.ribbon {
     border-radius: 0 2px 2px 0;
     color: #fff;
