arrumando o link do botao do google

--- a/templates/system/users/index.html
+++ b/templates/system/users/index.html
@@ -6,7 +6,7 @@
 
   <div class="social-login">
     <p>Economize tempo, acesse sua conta utilizando o <strong>Google Plus</strong>.</p>
-    <a class="ui button red"><i class="icon icon-google-plus"></i>Entrar com o Google +</a>
+    <a href="/openid/login/" class="ui button red"><i class="icon icon-google-plus"></i>Entrar com o Google +</a>
   </div>
 
   <div class="ui divider horizontal">Ou</div>
