muitas coisas antes de enviar p/ git

--- a/assets/styles/sass/layouts/website.scss
+++ b/assets/styles/sass/layouts/website.scss
@@ -97,16 +97,16 @@ box-shadow: 211px 0 232px #5f5b79 inset;
     width:80px;
     height:80px;
     &.roupas{
-      background: url('../images/website/icons/img-roupas.png') center center no-repeat;
+      background: url('../images/icons/roupas.png') center center no-repeat;
     }
     &.eletro{
-      background: url('../images/website/icons/img-eletronicos.png') center no-repeat;
+      background: url('../images/icons/eletronicos.png') center no-repeat;
     }
     &.jogos{
-      background: url('../images/website/icons/img-jogos.png') center no-repeat;
+      background: url('../images/icons/jogos.png') center no-repeat;
     }
     &.outros{
-      background: url('../images/website/icons/img-outros.png') center no-repeat;
+      background: url('../images/icons/outros.png') center no-repeat;
     }
   }
 }
