--- a/assets/styles/sass/sections/system/users.scss
+++ b/assets/styles/sass/sections/system/users.scss
@@ -1,17 +1,6 @@
 [data-page="users#index"] {
   .login, .register {
-    background: #fff;
-    border-radius: 4px;
-    box-shadow: 0 1px 1px 1px rgba(0, 0, 0, 0.1);
-
-    h2 {
-      border-bottom: 1px dotted #ddd;
-      font-size: 175%;
-      font-weight: 100;
-      margin: 0 0 10px;
-      padding-bottom: 7px;
-      text-transform: lowercase;
-    }
+    @extend %box;
   }
 
   .login {
