--- a/assets/styles/sass/sections/system/wishes.scss
+++ b/assets/styles/sass/sections/system/wishes.scss
@@ -32,6 +32,7 @@
     }
 
     .actions {
+      clear: both;
       margin-top: 20px;
       text-align: center;
       .button {
@@ -113,4 +114,63 @@
     table { width: 100%; }
   }
 
+}
+
+[data-page="wishes#new"] {
+  .new-product {
+    @extend %box;
+    padding: 15px;
+    @include clearfix;
+    .image-upload {
+      background: #fafafa;
+      border: 3px solid #eee;
+      border-radius: 5px;
+      color: #666;
+      cursor: pointer;
+      padding: 50px 25px;
+      text-align: center;
+      text-transform: uppercase;
+      @include transition(all 250ms ease);
+      &:hover {
+        background: #f7f7f7;
+        border-color: #ddd;
+      }
+      .icon {
+        color: #999;
+        font-size: 300%;
+      }
+    }
+    aside {
+    }
+    .content {
+      float: right;
+      .categories {
+        padding: 0;
+        list-style-type: none;
+        li {
+          border: 2px solid #eee;
+          border-radius: 4px;
+          cursor: pointer;
+          display: inline-block;
+          text-align: center;
+          margin-right: 4px;
+          padding: 10px 20px;
+          @include transition(all 250ms ease);
+          &:last-child {
+            margin-right: 0;
+          }
+          &:hover {
+            border-color: #ccc;
+          }
+          &.active {
+            background: #e9fffc;
+            border-color: #ccc;
+          }
+          span {
+            display: block;
+          }
+        }
+      }
+    }
+  }
 }
