--- a/templates/system/wishes/new.html
+++ b/templates/system/wishes/new.html
@@ -1,14 +1,56 @@
 {% extends "system.html" %}
 
 {% block system %}
-<h1>Cadastre seus desejos! 2</h1>
 
-{% load filetransfers %}
+<section class="new-product">
+  <h2>Cadastro do produto</h2>
+
+  <form class="ui form">
+    <aside role="sidebar" class="column-4">
+      <div class="image-upload">
+        <i class="icon icon-upload"></i>
+        <p>Clique aqui para enviar sua imagem.</p>
+      </div>
+      <input class="image-upload-field" type="file">
+    </aside>
+
+    <div class="content column-7">
+      <div class="field">
+        <label>Título</label>
+        <input type="text" autofocus required>
+      </div>
+
+      <div class="field">
+        <label>Categoria</label>
+        <ul class="categories">
+          <li class="active" data-value="1"><img src="/images/icons/roupas.png" alt="Roupas"> <span>Roupas</span></li>
+          <li data-value="2"><img src="/images/icons/eletronicos.png" alt="Eletrônicos"> <span>Eletrônicos</span></li>
+          <li data-value="3"><img src="/images/icons/jogos.png" alt="Jogos"> <span>Jogos</span></li>
+          <li data-value="4"><img src="/images/icons/outros.png" alt="Outros"> <span>Outros</span></li>
+        </ul>
+        <input type="hidden" value="1">
+      </div>
+
+      <div class="field">
+        <label>Descrição</label>
+        <textarea></textarea>
+      </div>
+
+      <div class="actions">
+        <button type="submit" class="ui button green">Salvar</button>
+      </div>
+    </div>
+  </form>
+</section>
+
+
+
+<!-- {% load filetransfers %}
 <form action="{{ upload_url }}" method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     {% render_upload_data upload_data %}
     <table>{{ form }}</table>
     <p>&nbsp;</p>
     <input type="submit" value="Cadastrar desejo!" />
-</form>
+</form> -->
 {% endblock %}
