removing red button remove

--- a/templates/system/wishes/show.html
+++ b/templates/system/wishes/show.html
@@ -13,7 +13,7 @@
 
   <div class="actions">
     <a href="#" class="ui button"><i class="icon icon-pencil"></i> Editar</a>
-    <a href="{% url remove_wish w.id %}" class="ui button red" data-confirm="Tem certeza que deseja remover?"><i class="icon icon-times"></i> Remover</a>
+    <a href="{% url remove_wish w.id %}" class="ui button" data-confirm="Tem certeza que deseja remover?"><i class="icon icon-times"></i> Remover</a>
   </div>
 </aside>
 
